--- a/index.html
+++ b/index.html
@@ -5,67 +5,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Jalp Patel's Site</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div class="logo">
-
-        <img  src="https://www.google.co.in/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
-    </div>
-    <div>
-
+    <div class="header">
         <nav class="nav">
-            <div class="header" >
-                <div class="header-elements" style="border-left:none">
-                    <a href="#">Home</a>
-                </div>
-                <div class="header-elements">
-                    <a href="#project">Project</a>
-                </div>
-                <div class="header-elements">
-                    <a href="#contact">Contact Me</a>
-                </div>
-                <div class="header-elements" style="border-right:none">
-                    <a href="#about">About Us</a>
-                </div>
+            <div class="nav-elements">
+                <a href="/index.html">Home</a>
+            </div>
+            <div class="nav-elements">
+                <a href="/">Personal Information</a>
+            </div>
+            <div class="nav-elements">
+                <a href="/">Skills</a>
+            </div>
+            <div class="nav-elements">
+                <a href="/">Projects</a>
+            </div>
+            <div class="nav-elements">
+                <a href="/">Contact Me</a>
             </div>
         </nav>
     </div>
-    <div>
-        <header>
-            <h1>
-                Think Like A Developer
-            </h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam ipsam tenetur vel mollitia non corrupti inventore, eaque, quas reiciendis maxime ipsa aliquam? Obcaecati provident nisi fuga tempore minima temporibus?</p>
-        </header>
+    <div class="home">
+        <div class="home_text">
+            <div class="home-text">
+                <div class="home_text1">
+                    <h1>Hey there,</h1>
+                    <h1>I am Jalp</h1>
+                </div>
+                <div class="home_text2">
+                    <h1>Creative Thinker</h1>
+                </div>
+            </div>
+        </div>
+        <div class="photo2">
+            <img src="myphoto2.jpg" width="400vh">
+        </div>
     </div>
-    <div id="project">
-        <div>
-            <h2>Python</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam reprehenderit nemo numquam eius odio? Temporibus quia, enim veritatis et esse asperiores ad qui sunt nemo animi ex saepe, ratione minima doloribus odit nihil dignissimos itaque quibusdam consequuntur accusantium tempora.</p>
-
+    <div class="name">
+        <h1>Short Intro</h1>
+    </div>
+    <div class="info_photo">
+        <div class="info">
+            <table>
+                <tr>
+                    <th id="right">
+                        <h2>Name:</h2>
+                    </th>
+                    <th id="left">
+                        <h2>Jalp Jitendrakumar Patel</h2>
+                    </th>
+                </tr>
+                <tr>
+                    <th id="right">
+                        <h2>DOB:</h2>
+                    </th>
+                    <th id="left">
+                        <h2>28th August,2004</h2>
+                    </th>
+                </tr>
+            </table>
         </div>
         <div>
-            <h2>HTML</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quaerat maiores quas repellendus quo a dolore rerum voluptas aspernatur at eum necessitatibus natus, qui consequuntur magnam veniam minima magni ullam dignissimos repudiandae sit tempora soluta nostrum laudantium? Aspernatur, quisquam perspiciatis?</p>
+            <img class="photo" src="myphoto.jpg" width="34vh">
         </div>
-        
     </div>
-    <div>
-        <h2>Developer</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit placeat earum quaerat asperiores eaque odit eum aperiam molestiae voluptas aut.</p>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name">
-            <lable for="email">Email:</lable>
-            <input type="email" id="email">
-            <input type="reset" name="reset">
-            <input type="submit" name="submit">
-        </form>
-    </div>
-    
 </body>
 
 </html>
