i will change colors at last

--- a/index.html
+++ b/index.html
@@ -30,19 +30,23 @@
         </nav>
     </div>
     <div class="home">
+        <div class="photos">
+            <div class="photo2" width="300vw">
+                <img src="myphoto3.jpg" width="300vw">
+            </div>
+            <div class="photo2" width="300vw">
+                <img src="myphoto2.jpg" width="300vw">
+            </div>
+        </div>
         <div class="home_text">
             <div class="home-text">
                 <div class="home_text1">
-                    <h1>Hey there,</h1>
-                    <h1>I am Jalp</h1>
+                    <h1>Hey there, I am Jalp!</h1>
                 </div>
                 <div class="home_text2">
-                    <h1>Creative Thinker</h1>
+                    <h1>---Creative Thinker---</h1>
                 </div>
             </div>
-        </div>
-        <div class="photo2">
-            <img src="myphoto2.jpg" width="400vh">
         </div>
     </div>
     <div class="name">
