color will be changed on website by me

--- a/index.html
+++ b/index.html
@@ -49,32 +49,40 @@
             </div>
         </div>
     </div>
-    <div class="name">
-        <h1>Short Intro</h1>
+    <div class="info">
+        <table class="table">
+            <tr class="name2">
+                <th id="right">
+                    <h2>Name:</h2>
+                </th>
+                <th id="left">
+                    <h2>Jalp Jitendrakumar Patel</h2>
+                </th>
+            </tr>
+            <tr class="dob">
+                <th id="right">
+                    <h2>DOB:</h2>
+                </th>
+                <th id="left">
+                    <h2>28th August,2004</h2>
+                </th>
+            </tr>
+        </table>
+        <table>
+            <td class="info2">
+                Hello, Myself Jalp Patel,coder with lateral thinking. I am a student and currently studying in Dhirubhai Ambani College (DAIICT). I know compititive coding in C++; web developement using HTML,CSS and Javascript; python. I also know Some basics of Cryptography and Security. Currently I am learning Ethical Hacking and Cyber Security. And I am also planning to learn Machine Learning in future. I am currently 3-star at codechef, and 1000 rated coder on codeforces. I enjoy playing with code, making  new things and reasearching on new topics. My some hobbies are to play cricket, and watch movies. 
+            </td>
+        </table>
     </div>
-    <div class="info_photo">
-        <div class="info">
-            <table>
-                <tr>
-                    <th id="right">
-                        <h2>Name:</h2>
-                    </th>
-                    <th id="left">
-                        <h2>Jalp Jitendrakumar Patel</h2>
-                    </th>
-                </tr>
-                <tr>
-                    <th id="right">
-                        <h2>DOB:</h2>
-                    </th>
-                    <th id="left">
-                        <h2>28th August,2004</h2>
-                    </th>
-                </tr>
-            </table>
+    
+    <div class="footer">
+        <div class="contact">
+            <h1>Contact Me</h1>
         </div>
         <div>
-            <img class="photo" src="myphoto.jpg" width="34vh">
+            <a href="https://gmail.com/">
+                <img src="icons8-gmail-240.png" width="50vw">
+            </a>
         </div>
     </div>
 </body>
