Finally it's done

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="header">
         <nav class="nav">
             <div class="nav-elements">
-                <a href="/index.html">Home</a>
+                <a href="#home">Home</a>
             </div>
             
             <div class="nav-elements">
                 <a href="#skills">Skills</a>
             </div>
             <div class="nav-elements">
-                <a href="/">Achievements</a>
+                <a href="#achievements">Achievements</a>
             </div>
             <div class="nav-elements">
                 <a href="#contactme">Contact Me</a>
@@ -28,8 +28,8 @@
         </nav>
     </div>
     <div class="home">
-        <div class="photos">
-            <div class="photo2" width="300vw">
+        <div class="photos" width="600vw">
+            <div class="photo3 photo2" width="100vw">
                 <img src="myphoto3.jpg" width="300vw">
             </div>
             <div class="photo2" width="300vw">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <div class="info">
+    <div class="info" id="home">
         <table class="table">
             <tr class="name2">
                 <th id="right">
@@ -107,11 +107,39 @@
         <h1>Achievements</h1>
     </div>
     <div class="info skill">
-        <div>
-            <h2>3-star at CodeChef</h2>
+        <div class="card">
+            <div>
+                <h2>2574th Global Rank in Kickstart</h2>
+            </div>
+            <div>
+                I have not taken part in many compitive compititions. But I have given only Round-C of Kickstart 2022, and I get a global rank of 2574.
+            </div>
         </div>
-        <div>
-            
+        <div class="card">
+            <div>
+                <h2>3-star at CodeChef</h2>
+            </div>
+            <div>
+                I am currently 3-star coder on CodeChef. I like to give contests, and i am very good at it. I am currently progressing toward becoming 4-star coder.You can check on clicking below icon:
+            </div>
+            <div>
+                <a href="https://www.codechef.com/users/jalp1428" target="_blank">
+                    <img src="cc-logo.svg" width="100vw" class="icon-photo2">
+                </a>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <h2>1100 rated on Codeforces</h2>
+            </div>
+            <div>
+                I am currently 1100 rated coder on Codeforces. I have given only 4 contests on Codeforces, and My rating is continuously increasing. You can check on clicking below icon:
+            </div>
+            <div>
+                <a href="https://codeforces.com/profile/Jalppatel1428" target="_blank">
+                    <img src="codeforces-logo-with-telegram.png" width="100vw" class="icon-photo2">
+                </a>
+            </div>
         </div>
     </div>
 
@@ -126,24 +154,28 @@
                 <h3>Select Platform To Contact:</h3>
             </div>
             <div class="icon">
-                <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCDkjvrrjZsVFZfmbQNZDvGgqnCTQNvRrnrRrxvTrLVkGRBjZsPrvgtZkSDQdPNWnXcTbq" target="_blank">
-                    <img src="icons8-gmail-240.png" width="50vw">
-                </a>
+                <div class="line-icon">
+                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCDkjvrrjZsVFZfmbQNZDvGgqnCTQNvRrnrRrxvTrLVkGRBjZsPrvgtZkSDQdPNWnXcTbq" target="_blank">
+                        <img src="icons8-gmail-240.png" width="50vw" class="icon-photo">
+                    </a>
+                </div>
+                <div class="line-icon">
+                    <a href="https://www.linkedin.com/in/jalp-patel-502b20225/" target="_blank">
+                        <img src="icons8-linkedin-240.png" width="50vw" class="icon-photo">
+                    </a>
+                </div>
             </div>
             <div class="icon">
-                <a href="https://www.linkedin.com/in/jalp-patel-502b20225/" target="_blank">
-                    <img src="icons8-linkedin-240.png" width="50vw">
-                </a>
-            </div>
-            <div class="icon">
-                <a href="https://www.instagram.com/jalp_2808/" target="_blank">
-                    <img src="icons8-instagram-240.png" width="50vw">
-                </a>
-            </div>
-            <div class="icon">
-                <a href="https://www.facebook.com/profile.php?id=100069888554682" target="_blank">
-                    <img src="icons8-facebook-240.png" width="50vw">
-                </a>
+                <div class="line-icon">
+                    <a href="https://www.instagram.com/jalp_2808/" target="_blank">
+                        <img src="icons8-instagram-240.png" width="50vw" class="icon-photo">
+                    </a>
+                </div>
+                <div class="line-icon">
+                    <a href="https://www.facebook.com/profile.php?id=100069888554682" target="_blank">
+                        <img src="icons8-facebook-240.png" width="50vw" class="icon-photo">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
